docs: status — router data plane complete
465 router tests across eleven packages, all in the default mvn test.
Records every ruling taken while building, the open questions worth a
ruling (Q56 newest), and the two watch items recorded rather than solved.

Adds a build-and-tooling section: preview is now genuinely enabled and pins
the runtime to the Java 25 feature release; docs resolve the JDK path
dynamically; and concurrent Maven runs share server/target and clobber each
other — an agent completion notification does not mean its build stopped.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>