@@ -6,8 +6,8 @@ able to resume from this file + `CONVENTIONS.md` + `docs/backlog.md` +
 
 ## Where we are (2026-08-24, evening)
 
-Reactor green, verified 2026-08-24: **server 1661**, 0 failures — plus
-usecase 30 · sdk 40 · fcdev 40. Coverage
+Reactor green on a clean uncontended build, 2026-08-25: **2041 tests** —
+usecase 30 · sdk 40 · **server 1931** · fcdev 40, 0 failures. Coverage
 180/243 lockfile operations (74%), zero drift. Commits on `main`; one commit
 per landed/audited unit.
 
@@ -20,127 +20,68 @@ Remaining platform work — the `principal` audit, `sdksync`, the remaining
 CRUD aggregates and auth — is **deferred**, not cancelled. It is all still
 listed under "Platform work, deferred" below and none of it is blocked.
 
-### Router progress (2026-08-24)
+### Router progress — data plane COMPLETE (2026-08-25)
 
-Spec gate **cleared**: `docs/spec/router.md` is current against Go `eff2a29`
-(§0). Five units landed, 133 tests, all in the default `mvn test` run.
+Spec gate cleared (`docs/spec/router.md` §0, current against Go `eff2a29`).
+**465 router tests**, all in the default `mvn test`, no profiles or tags.
 
-| Unit | Package | Pins |
-|---|---|---|
-| Wire contract | `router.wire` | `Message` (both Go `omitempty` semantics), `DispatchMode`, `MediationType` (sealed, so an unsupported value reaches the ACK-drop instead of poisoning), `MediationOutcome`, response parse order, HMAC golden vector |
-| Retry policy | `router.policy` | The **Q3 collapse** — Go's two nested retry layers as one flattened schedule; `startsBurst`/`endsBurst` keep breaker accounting per burst |
-| Group flush | `router.policy` | Q54 TTL-bounded suppression, extend-only, per-pool |
-| Breaker + registry | `router.policy` | Failure-**rate** breaking, per-endpoint, idle retirement |
-| Rate limiter | `router.policy` | Token bucket; `await` reserves rather than polls |
-| Ordered groups | `router.pool` | The **Q1 ruling**, plus the failure-kind split |
-| Pool | `router.pool` | Workers, drainers, capacity, the delivery pipeline |
-| HTTP mediator | `router.pool` | Status → outcome, signing, breaker rules |
+| Package | What it holds |
+|---|---|
+| `router.wire` | `Message` (both Go `omitempty` semantics), `DispatchMode`, sealed `MediationType`, sealed `MediationOutcome`, response parse order, HMAC golden vector |
+| `router.policy` | `RetryPolicy` (the **Q3 collapse**), `GroupFlushRegistry`, `CircuitBreaker` + registry, `RateLimiter` |
+| `router.pool` | `OrderedGroups` (the **Q1 ruling**), `Pool`, `HttpMediator`, `QueuedMessage` |
+| `router.queue` | `Consumer` contract + Postgres, SQS, NATS backends |
+| `router.inflight` | `InFlightTracker` — new / redelivery / external-requeue |
+| `router.manager` | routing, `ConsumerLoop`, reconfigure, `ConsumerSupervisor`, `RouterShutdown`, `RouterServer` |
+| `router.config` | `RouterConfig`, `PoolSpec` (wire) vs `Pool.Config` (runtime), merge |
+| `router.standby` | `LeaderElection` + `RedisLockStore` |
+| `router.observability` / `.prometheus` / `.api` | metrics collector, warning store, exposition, §9.1 monitoring API |
 
 **Rulings taken while building** (all recorded in `docs/spec/router.md`):
 
-- **Q16** — the Java scheduler propagates `dispatchMode` and `poolCode`.
-  Go publishes neither, so today every dispatch job is `IMMEDIATE` in
-  `DEFAULT-POOL` and the ordered path is dead code. Go fix half-done
-  (`7414bc5` mode; pool half correctly reverted in `7ed2dba` after a broken
-  claim query). Java spec: `docs/spec/dispatch-propagation.md`.
-- **Pool codes namespaced** `{clientIdentifier}-{code}`, fallback
-  `{clientIdentifier}-DEFAULT-POOL`, resolved at publish time; the router
-  synthesises `*-DEFAULT-POOL` pools on demand.
-- **Q51** — carry the real 2xx status. Java done; Go fix specced in
-  `docs/spec/router-fixes.md`.
-- **Q54** — honour `flushGroup` from any target; revisit logged in
-  `docs/improvements.md`.
-- **Ordered-head failure split by kind** — 502/503/504 and transport NACK
-  the whole group back to the broker (retry indefinitely, broker owns it);
-  500 retries 3× then ACKs, blocking or advancing the group per mode.
+| Q | Ruling |
+|---|---|
+| Q3 | Two nested retry layers collapse to one flattened schedule; breaker accounting stays **per burst** |
+| Q16 | Java scheduler propagates `dispatchMode` and `poolCode` — Go publishes neither, so its ordered path is dead code. Go: mode half done (`7414bc5`), pool half correctly reverted (`7ed2dba`) |
+| — | Pool codes namespaced `{clientIdentifier}-{code}`, resolved at publish time; router synthesises `*-DEFAULT-POOL` on demand |
+| Q17 | A malformed Postgres row **moves to `queue_messages_failed`** — one bad row used to stop the queue permanently |
+| Q28 | **Every** restart attempt counts, not only successful ones — Go's version meant a consumer that could never be rebuilt never escalated |
+| Q51 | Carry the real 2xx status (Java done; Go fix in `router-fixes.md`) |
+| Q54 | Honour `flushGroup` from any target; revisit logged in `improvements.md` |
+| — | 3xx is a **permanent** error: ACK with an error notice, never retried |
+| — | Ordered-head failure split by kind: 502/503/504 and transport NACK the group back to the broker; 500 retries 3× then ACKs |
+
+**Open, worth a ruling:** Q56 (`/monitoring/standby-status` reports the lock
+key as `instance_id`, so every instance reports the same value — useless for
+the one question it answers). Plus Q4–Q15, Q18–Q50 in `router.md` §13, where
+"keep" is the standing default.
 
 **Watch items recorded, not solved:** the unavailable path retries at the
 *broker's* cadence (nack delay is advisory), so the breaker is what actually
 protects a downed target; and ACK-on-500 assumes the target re-drives what
-it rejected, true of the platform's dispatch endpoint but not of a
-third-party ordered target.
+it rejected — true of the platform's dispatch endpoint, not of a third-party
+ordered target.
 
-**Next router units:** consumer/queue-backend contract (then SQS, Postgres,
-NATS — good delegation candidates), the in-flight tracker, `Manager`
-(routing, consumer loops, pool registry, config sync), observability
-(metrics, warnings, monitoring API), standby/leadership, ALB, shutdown.
+### Build and tooling notes (2026-08-25)
 
-**Go reference state.** `../flowcatalyst-go` is on branch
-`fix/oauth-endpoint-compliance` at `f908c3b`, working tree clean. The owner
-confirms **no router work is in flight** — `eff2a29` is the newest
-router-touching commit, so `docs/spec/router.md` §0's drift table is complete
-and its target is stable. The platform side is still moving (the auth fixes
-below), so keep re-checking `git log` before platform units; the router no
-longer needs that treatment.
+- **`--enable-preview` is now genuinely enabled** — compiler args *and*
+  surefire `argLine`. CONVENTIONS §8 had claimed it was when it was not.
+  This **pins the runtime to the Java 25 feature release**: 25.0.1 → 25.0.2
+  is fine, 25 → 26 needs a recompile.
+- Docs now use `$(mise where graalvm)` instead of a hardcoded JDK path —
+  `agent-prompts.md` is pasted into subagent prompts, so a point-release
+  bump used to break every delegated agent.
+- **Concurrent Maven runs share `server/target/` and clobber each other.**
+  Several "flaky" failures today were this, not real. An agent's completion
+  notification does **not** mean its build has stopped — check for live
+  Maven processes before trusting a result, and prefer `mvn clean test`
+  after any interface change.
 
-### Auth question rulings landed 2026-08-24
+### Router work remaining
 
-Rulings are recorded in `docs/spec/auth-core.md`; the change specs carry the
-design. No auth Java yet — these are decisions, not code.
-
-| Q | Ruling | Where the design lives |
-|---|---|---|
-| Q4 | Move `/oauth/userinfo` (and discovery) to the public group | `oauthapi-fixes.md` Fix 1 |
-| Q5/Q6 | Keep Basic auth; fix `client_credentials` to accept it, and close the rate-limit evasion | `oauthapi-fixes.md` Fix 2, 3 |
-| Q7, Q8 | Already fixed in Go — verified, not duplicated | `oauthapi-fixes.md` |
-| Q9 | Arrays everywhere — **done in Go** (`b5b471d`, `f908c3b`), nothing left to port | `oauthapi-fixes.md` Fix 5 |
-| Q10 | Cookie-mint failure answers 500, cause not leaked | `oauthapi-fixes.md` Fix 4 |
-| Q11 | `GlobalLockSecs` becomes a **real lock** (deny while over-ceiling AND inside the lock; advertise the later) | `login-backoff-lock.md` |
-| Q12 | Wire `ratelimit.Prune` into the existing purger, retention `MaxWindow()` | `auth-retention.md` |
-| Q13 | Keep no-revocation-on-code-replay — **deferred out of the port** | `improvements.md` |
-| Q14 | Keep the hard secret cutover in the port; grace period + immediate revoke **deferred out of the port** | `improvements.md` |
-| Q15 | Derive `expires_in` from `AccessTokenExpirySecs` (six hard-coded sites) | `oauthapi-fixes.md` Fix 6 |
-
-Still open in `auth-core.md`: **Q16, Q17, Q18–Q29**. Plus all 25
-`auth-identity.md` questions and its 15 observed Go defects.
-
-**New in this repo:** `docs/improvements.md` — platform improvements
-deliberately **outside** the port. Java reproduces current Go behaviour for
-everything in that file; nothing there blocks a port unit.
-
-**Lockfile synced** to Go `f908c3b` — `server/src/main/resources/openapi/openapi.lock.json`
-and `sdk/openapi/openapi.json` are byte-identical to `api/openapi.lock.json`.
-178 paths / 243 operations / 231 schemas; `LockfileCoverageTest` passes.
-
-| Unit | Spec | Port | Audit | Notes |
-|---|---|---|---|---|
-| usecase envelope | `docs/usecase-envelope.md` | ✔ | ✔ | |
-| sdk (client SDK) | — | ✔ (copied, on usecase) | — | openapi.json = lockfile |
-| server foundations (Env, logging, signing keys, JWT auth, HttpError, apicommon, Json, spec routes, SPA, listeners) | — | ✔ | ✔ | `JwtVerifier.Verification` sealed |
-| Flyway baseline + fingerprint/adoption tests, jOOQ codegen | `docs/database.md` | ✔ | ✔ | |
-| seeder + PasswordHash | `docs/spec/seeder.md`, `password-hash.md` | ✔ | ✔ (report pending at time of writing) | |
-| fcdev module | `docs/spec/fcdev.md`, `docs/fcdev.md` | ✔ | ✔ | init/mcp/outbox/upgrade stubbed |
-| eventtype | `docs/spec/eventtype.md` | ✔ | ✔ | TEMPLATE aggregate |
-| connection | `docs/spec/connection.md` | ✔ | ✔ | |
-| dispatchpool | `docs/spec/dispatchpool.md` | ✔ | ✔ | |
-| role (+ permissions) | `docs/spec/role.md` | ✔ | ✔ | |
-| subscription | `docs/spec/subscription.md` | ✔ | ✔ | `SyncSubscriptions` ported, sdksync route not wired |
-| client | `docs/spec/client.md` | ✔ | ✔ | uses application's repos for `/clients/{id}/applications*` |
-| application | `docs/spec/application.md` | ✔ | ✔ | provision-service-account / provision-login-client deferred |
-| process | `docs/spec/process.md` | ✔ | ✔ | |
-| cors | `docs/spec/cors.md` | ✔ | ✔ | CORS *filter* still to build (owner decision) |
-| platformconfig | `docs/spec/platformconfig.md` | ✔ | ✔ | |
-| audit (read) | `docs/spec/audit.md` | ✔ | ✔ | batch ingest route = sdk unit |
-| shared encryption | `docs/spec/encryption.md` | ✔ | ✔ | Go-minted golden vector |
-| emaildomainmapping | `docs/spec/emaildomainmapping.md` | ✔ | ✔ | principal reset write flagged |
-| loginattempt | `docs/spec/loginattempt.md` | ✔ | ✔ | backoff repo contract for auth; shared `KeysetCursor` |
-| identityprovider | `docs/spec/identityprovider.md` | ✔ | ✔ | app key now via `Env` |
-| event (read) | `docs/spec/event.md` | ✔ | ✔ | ingest POSTs = sdk unit |
-| dispatchjob | `docs/spec/dispatchjob.md` | ✔ | ✔ | ignore/completed routes need lockfile addition (owner) |
-| docs (appdocs + docsapi) | `docs/spec/docs.md` | ✔ | ✔ | published pages copied |
-| scheduledjob (+ cron) | `docs/spec/scheduledjob.md` | ✔ | ✔ | 6-field cron hand-ported, 75 pinned rows |
-| **principal** | `docs/spec/principal.md` | ✔ | ☐ **audit not run** | 31 routes, 39 operations; **no `PrincipalApiTest` yet**; emailer/notifier/MFA are stubs (spec §10) |
-| **openapispecs** | `docs/spec/openapispecs.md` | ✔ | ☐ | not registered — consumed by sdksync |
-| **sdksync** | `docs/spec/sdksync.md` | ◐ **5 DTO files only** | ☐ | no Api, not registered; the `Sync*` operations it wires all exist |
-| publicapi + branding | `docs/spec/publicapi.md` | ✔ | ✔ | incl. legacy `/api/config/platform` |
-| shared `Visibility` (+`VisibilitySql`) | — | ✔ | — | replaces event/dispatchjob copies |
-| auth core (spec) | `docs/spec/auth-core.md` (29 Qs, artifact) | ☐ gated on owner | ☐ | |
-| scheduledjob (+cron), principal, auth-identity spec | running | ☐ | ☐ | |
-| `Permission` enum (Checks refactor), sealed `Server.Mode`/`Spa`/`SigningKeys.KeyRotation`, `Metrics.Running` | — | ✔ | — | owner-directed refactors, 2026-08-22 |
-| **router** | `docs/spec/router.md` (50 Qs; Q1–Q3 ruled) | ☐ **NEXT — see below** | ☐ | §0 drift must be re-extracted first |
-
-
-
+ALB deregistration; mounting the router into the platform server so it
+starts with the process; then drop-in verification — the side-by-side replay
+harness against the Go binary and a cutover rehearsal.
 
 ## Next wave (in order)
 
